--- a/piper_bt/test/action/CMakeLists.txt
+++ b/piper_bt/test/action/CMakeLists.txt
@@ -6,8 +6,6 @@ ament_add_gtest(test_tts_action
 )
 target_link_libraries(test_tts_action
   ament_index_cpp::ament_index_cpp
+  behaviortree_cpp::behaviortree_cpp
   piper_tts_action_bt_node
-)
-ament_target_dependencies(test_tts_action
-  ${dependencies}
 )
